# prisma-timer

./: .gitignore  Cargo.toml  Makefile  README.md  flake.nix  meson.build
build-aux/: io.github.manenfu.PrismaTimer.json
data/: io.github.manenfu.PrismaTimer.desktop.in  io.github.manenfu.PrismaTimer.gschema.xml  io.github.manenfu.PrismaTimer.metainfo.xml.in  meson.build
data/icons/: meson.build
data/resources/: io.github.manenfu.PrismaTimer.gresource.xml  meson.build  style.css  window.ui
data/resources/ui/: confirm_remove_dialog.ui  penalty_selector.ui  preferences_window.ui  session_item_row.ui  shortcuts_window.ui  solve_dialog.ui  text_area_row.ui  time_label.ui  timer_face.ui  window.ui
po/: POTFILES  meson.build
src/: application.rs  data.rs  main.rs  meson.build  ui.rs  util.rs  window.rs
src/data/: countdown_timer_state_machine.rs  penalty.rs  session.rs  session_item.rs  simple_timer_state_machine.rs  solve.rs  solve_data.rs  solve_time.rs  state_machine.rs  statistics.rs  timer_content.rs  timer_settings.rs  timer_state.rs  timer_state_machine.rs  timer_state_machine_provider.rs  timer_state_machine_settings_provider.rs
src/data/countdown_timer_state_machine/: dnf.rs  finished.rs  idle.rs  idle_ready.rs  inspect.rs  inspect_ready.rs  inspect_wait.rs  timing.rs
src/data/simple_timer_state_machine/: finished.rs  idle.rs  ready.rs  timing.rs  wait.rs
src/ui/: penalty_selector.rs  preferences_window.rs  session_item_row.rs  solve_dialog.rs  text_area_row.rs  time_label.rs  timer_face.rs
