[package]
name = "prisma-timer"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.7", package = "gtk4", features = ["v4_12"] }
adw = { version = "0.5", package = "libadwaita", features = ["v1_4"] }
log = "0.4"
env_logger = "0.10"
once_cell = "1.19"
